external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_infix_and_postfix_native_struct.move
address 0x42 {
module M {
    // has both invalid declaration since postfix ability declarations
    // are not allowed for native structs
    public native struct Foo has copy, drop; has store;
}
}
